fix alert background contrast to match caja

--- a/styles/bootstrap-overrides/alerts.less
+++ b/styles/bootstrap-overrides/alerts.less
@@ -55,7 +55,7 @@
 @alert-warning-border:        @gray-lighter;
 
 @alert-danger-bg:             lighten(@state-danger-bg,2%);
-@alert-danger-text:           @gray-light;
+@alert-danger-text:           #333;
 @alert-danger-border:         @gray-lighter;
 
 .alert {
